cmd/kube-apiserver/webhook/test-mutating-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: test-mutating-webhook
webhooks:
  - name: test-mutating-webhook.example.com
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUREekNDQWZlZ0F3SUJBZ0lVYXRLdm1KWXJjTTVzWXdibHYvVjdVcUNIdWRvd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0Z6RVZNQk1HQTFVRUF3d01XVTlWVWw5RFFWOU9RVTFGTUI0WERUSXpNRGN3TmpBMk1URXlNRm9YRFRNegpNRGN3TXpBMk1URXlNRm93RnpFVk1CTUdBMVVFQXd3TVdVOVZVbDlEUVY5T1FVMUZNSUlCSWpBTkJna3Foa2lHCjl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUF2cnBVRmFpRGdIVTBOSzBRTjhYUC9acHZHa3ZMS1NubWkxV3oKcGIyRjdjKytIQkxac1hmcUpZSnVLMit5bTkvYmFwV3BWaDBkMC9RSDFhU24veVhDV2hKT0Y1T0VRUDQ5cFVsLwpFdWNsZjdRYmQ5 [...]
      url: https://127.0.0.1:8080/mutate
    rules:
      - apiGroups: [ "" ]
        apiVersions: [ "v1" ]
        operations: [ "CREATE" ]
        resources: [ "pods" ]
    failurePolicy: Fail
    sideEffects: None
    admissionReviewVersions: [ "v1", "v1beta1" ]
